@@ -1984,6 +1984,7 @@
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
     <branch id="gnome-2-22" stringfrozen="true"/>
+    <branch id="gnome-2-24" stringfrozen="false"/>
   </module>
 
   <module id="totem-pl-parser">
@@ -1992,6 +1993,7 @@
     <bugs-component>playlist parser</bugs-component>
     <branch id="HEAD"/>
     <branch id="gnome-2-22" stringfrozen="true"/>
+    <branch id="gnome-2-24" stringfrozen="false"/>
   </module>
 
   <module id="tracker">
