@@ -771,8 +771,8 @@
       <module id="sound-juicer"/>
       <module id="swfdec-gnome"/>
       <module id="tomboy"/>
-      <module id="totem"/>
-      <module id="totem-pl-parser"/>
+      <module id="totem" branch="gnome-2-24"/>
+      <module id="totem-pl-parser" branch="gnome-2-24"/>
       <module id="vinagre"/>
       <module id="vino"/>
       <module id="vte"/>
