@@ -1,3 +1,8 @@
+2008-08-30 Gil Forcada <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Totem and totem-pl-parser branched for GNOME 2.24.
+
 2008-08-30  Claude Paroz  <claude@2xlibre.net>
 
 	* module.py: Do computation in render() instead of __init__() for
